[tool.poetry]
name = "ptdataloader"
version = "0.0.1"
description = "Test HF Dataset Wrapper"
authors = ["Michael Shtelma <mshtelma@gmail.com>"]
license = "Apache-2.0"
homepage = ""
keywords = ['pytorch']

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
setuptools = ">=67.7.2"
torch = "2.0.0"
torchvision = ">=0.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"